src/objects/c2g__codaCreditNote__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcreditnote</customHelpPage>
    <description>Holds information that applies to the whole credit note such as customer account and credit note date.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CopyAccountValues__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Account Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CopyDefaultPrintedTextDefinitions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy Default Printed Text Definitions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Note Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Credit Note Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteDescription__c</fullName>
        <label>Credit Note Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteRate__c</fullName>
        <description>The document to home exchange rate.</description>
        <label>Credit Note Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteReason__c</fullName>
        <label>Credit Note Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Damaged Goods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goods Returned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Shipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overcharge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrospective Discount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteStatus__c</fullName>
        <label>Credit Note Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Post</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ready to Post &amp; Match</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteTotal__c</fullName>
        <formula>c2g__NetTotal__c + c2g__TaxTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Credit Note Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DeriveDueDate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Due Date</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Dimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <description>The dual to home exchange rate.</description>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DueDate__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>24</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>SalesCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceDate__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>c2g__codaInvoice__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MatchType__c</fullName>
        <formula>TEXT(c2g__Transaction__r.c2g__MatchType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__NetTotal__c</fullName>
        <label>Net Total</label>
        <summarizedField>c2g__codaCreditNoteLineItem__c.c2g__NetValue__c</summarizedField>
        <summaryForeignKey>c2g__codaCreditNoteLineItem__c.c2g__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The opportunity to which this Credit Note is related.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>SalesCreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OutstandingValue__c</fullName>
        <formula>c2g__Transaction__r.c2g__DocumentOutstandingTotal__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__CreditNoteStatus__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0, &apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Sales Credit Notes</relationshipLabel>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PrintStatus__c</fullName>
        <label>Print Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Printed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Printed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 1 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Heading__c</fullName>
        <label>Printed Text 1 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1TextDefinitionName__c</fullName>
        <label>Printed Text 1 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText1Text__c</fullName>
        <label>Printed Text 1 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 2 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Heading__c</fullName>
        <label>Printed Text 2 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2TextDefinitionName__c</fullName>
        <label>Printed Text 2 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText2Text__c</fullName>
        <label>Printed Text 2 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3AllowEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Printed Text 3 Allow Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Heading__c</fullName>
        <label>Printed Text 3 Heading</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3TextDefinitionName__c</fullName>
        <label>Printed Text 3 Text Definition Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PrintedText3Text__c</fullName>
        <label>Printed Text 3 Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxDocumentCode__c</fullName>
        <label>Sales tax document code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SalesTaxStatus__c</fullName>
        <description>The current sales tax status of the invoice.</description>
        <label>Sales Tax Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Calculated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Calculated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finalized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__Tax1Total__c</fullName>
        <label>Tax 1 Total</label>
        <summarizedField>c2g__codaCreditNoteLineItem__c.c2g__TaxValue1__c</summarizedField>
        <summaryForeignKey>c2g__codaCreditNoteLineItem__c.c2g__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax2Total__c</fullName>
        <label>Tax 2 Total</label>
        <summarizedField>c2g__codaCreditNoteLineItem__c.c2g__TaxValue2__c</summarizedField>
        <summaryForeignKey>c2g__codaCreditNoteLineItem__c.c2g__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__Tax3Total__c</fullName>
        <label>Tax 3 Total</label>
        <summarizedField>c2g__codaCreditNoteLineItem__c.c2g__TaxValue3__c</summarizedField>
        <summaryForeignKey>c2g__codaCreditNoteLineItem__c.c2g__CreditNote__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 2</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code 2)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxCode3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code 3</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Sales Credit Notes (Tax Code 3)</relationshipLabel>
        <relationshipName>CreditNotesTaxCode3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipName>CreditNotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffbext__Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <label>Sales Credit Note</label>
    <listViews>
        <fullName>FF_Fly_Now_Pay_Later_Limited_06936813_codaCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Fly Now Pay Later Limited (06936813)</label>
        <queue>FF_Fly_Now_Pay_Later_Limited_06936813</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_Limited_codaCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund Limited</label>
        <queue>FF_Travelfund_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_Travelfund_co_uk_Limited_codaCreditNote</fullName>
        <filterScope>Queue</filterScope>
        <label>FF Travelfund.co.uk Limited</label>
        <queue>FF_Travelfund_co_uk_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>NAME</columns>
        <columns>c2g__Account__c</columns>
        <columns>c2g__CreditNoteDate__c</columns>
        <columns>c2g__Period__c</columns>
        <columns>c2g__DueDate__c</columns>
        <columns>c2g__CreditNoteCurrency__c</columns>
        <columns>c2g__CreditNoteTotal__c</columns>
        <columns>c2g__Invoice__c</columns>
        <columns>c2g__Opportunity__c</columns>
        <columns>c2g__CreditNoteReason__c</columns>
        <columns>c2g__PrintStatus__c</columns>
        <columns>c2g__CreditNoteStatus__c</columns>
        <columns>c2g__DiscardReason__c</columns>
        <columns>c2g__OutstandingValue__c</columns>
        <columns>c2g__OwnerCompany__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SCR{000000}</displayFormat>
        <label>Credit Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Notes</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>